modify getAllPossiblePositions method